feat: completed header section (19:25)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flip Card</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <div class="front"></div>
+            <div class="back">
+                <h1>Back of Card</h1>
+                <p>Additional info on the back of the card</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
