feat: completed additional information

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="front"></div>
             <div class="back">
                 <h1>Back of Card</h1>
-                <p>Additional info on the back of the card</p>
+                <p> Some additional info on the back of the card</p>
             </div>
         </div>
     </div>
